Lab2. Пошук мінімуму Java

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ lab1_threads_java/.idea/
 lab1_threads_sharp/.vs
 lab1_threads_sharp/bin
 lab1_threads_sharp/obj
+
+lab2_sync_min_arr_java/out/
+lab2_sync_min_arr_java/.idea/
