Lab2. Пошук мінімуму C#

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ lab1_threads_sharp/obj
 
 lab2_sync_min_arr_java/out/
 lab2_sync_min_arr_java/.idea/
+lab2_sync_min_arr_sharp/.vs
+lab2_sync_min_arr_sharp/bin
+lab2_sync_min_arr_sharp/obj
