Lab3. Initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ lab2_sync_min_arr_java/.idea/
 lab2_sync_min_arr_sharp/.vs
 lab2_sync_min_arr_sharp/bin
 lab2_sync_min_arr_sharp/obj
+
+lab3_semaphore_java/out/
+lab3_semaphore_java/.idea/
+lab3_semaphore_sharp/.vs
+lab3_semaphore_sharp/bin
+lab3_semaphore_sharp/obj
